Add backup script

--- a/AspireTesting.AppHost/AspireTesting.AppHost.csproj
+++ b/AspireTesting.AppHost/AspireTesting.AppHost.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\AspireTesting\AspireTesting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="data\" />
+  </ItemGroup>
+
 </Project>
