--- a/AspireTesting/appsettings.json
+++ b/AspireTesting/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AppDatabase": "Server=localhost;Database=RedMan;Uid=postgres;Pwd=123;"
+  },
   "AllowedHosts": "*"
 }
