--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,5 +22,5 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Unit Tests
+    - name: Tests
       run: dotnet test AspireTesting.sln --verbosity normal --configuration Release
