--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -23,6 +23,9 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Install Aspire
+      run: dotnet workload install aspire
+
     - name: Restore dependencies
       run: dotnet restore
 
