--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,8 +22,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: Install Aspire Workload
+      run: dotnet workload install aspire
 
     - name: Tests
       run: dotnet test AspireTesting.sln --verbosity normal --configuration Release
