--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -25,5 +25,12 @@ jobs:
     - name: Install Aspire Workload
       run: dotnet workload install aspire
 
+    - name: App Settings Variable Substitution
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: '${{env.DOTNET_ROOT}}\AspireTesting\appsettings.json'
+      env:
+        ConnectionStrings:AppDatabase: ${{ secrets.CONNECTIONSTRINGS_APPDATABASE }}
+
     - name: Tests
       run: dotnet test AspireTesting.sln --verbosity normal --configuration Release
