--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -28,7 +28,7 @@ jobs:
     - name: App Settings Variable Substitution
       uses: microsoft/variable-substitution@v1
       with:
-        files: '${{env.DOTNET_ROOT}}\AspireTesting\appsettings.json'
+        files: '/AspireTesting/appsettings.json'
       env:
         ConnectionStrings:AppDatabase: ${{ secrets.CONNECTIONSTRINGS_APPDATABASE }}
 
