--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -25,10 +25,13 @@ jobs:
     - name: Install Aspire Workload
       run: dotnet workload install aspire
 
+    - name: Publish
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/AspireTesting
+
     - name: App Settings Variable Substitution
       uses: microsoft/variable-substitution@v1
       with:
-        files: '/AspireTesting/appsettings.json'
+        files: '${{env.DOTNET_ROOT}}/AspireTesting/AspireTesting/appsettings.json'
       env:
         ConnectionStrings:AppDatabase: ${{ secrets.CONNECTIONSTRINGS_APPDATABASE }}
 
