--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install Aspire Workload
       run: dotnet workload install aspire
 
-    - name: Publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/AspireTesting
+    - name: View files
+      run: ls -la
 
     - name: App Settings Variable Substitution
       uses: microsoft/variable-substitution@v1
