--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -11,6 +11,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: postgres        
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 5432:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
@@ -31,6 +48,9 @@ jobs:
         files: 'AspireTesting/appsettings.json'
       env:
         ConnectionStrings.AppDatabase: ${{ secrets.CONNECTIONSTRINGS_APPDATABASE }}
+
+    - name: Setup Postgres
+      uses: ikalnytskyi/action-setup-postgres@v7
 
     - name: Tests
       run: dotnet test AspireTesting.sln --verbosity normal --configuration Release
