--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,6 +29,9 @@ jobs:
           --health-retries 5
 
     steps:
+    - name: Check Docker
+      run: docker version
+
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
