--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -50,8 +50,8 @@ jobs:
         ConnectionStrings.AppDatabase: ${{ secrets.CONNECTIONSTRINGS_APPDATABASE }}
 
     - name: Install Podman
-      run: sudo apt-get update && \
-           sudo apt-get -y install podman && \
+      run: apt-get update && \
+           apt-get -y install podman && \
            podman version
 
     - name: Tests
