Add sample blazor project

--- a/AspireTesting.AppHost/AspireTesting.AppHost.csproj
+++ b/AspireTesting.AppHost/AspireTesting.AppHost.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspireTesting.Client\AspireTesting.Client.csproj" />
     <ProjectReference Include="..\AspireTesting\AspireTesting.csproj" />
   </ItemGroup>
 
